--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
+        </div>
+        <!-- Main Theater Img -->
+        <div>
+        <img src="https://lh3.googleusercontent.com/5Dq6ocrWOMHE0B6tCxga2n3vQTjx6-L7j8Y0wuwzckGIQOXaQM5u-xNL-X1sbUA8e9m6-A79QCKKjrY=w1898-h902" alt="TheaterImg" class="MainM"> 
+        </div>
+        <!-- box -->
+        <div class="Secbox">
+          <p class="Sectxt">September Shows</p> </div>
+        <!-- Smaller bottom imgs -->
         
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
+        </div>
+        <div>
+            <h1 class="bigtxt">Featured Shows</h1>    
         </div>
     </div>
         
