--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="Secbox">
           <p class="Sectxt">September Shows</p> </div>
         <!-- Smaller bottom imgs -->
-        
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr>
+        <div>         
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb"> 
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
+        </div>
         </div>
         <div>
             <h1 class="bigtxt">Featured Shows</h1>    
         </div>
-    </div>
-        
+    </div>        
 </body>
 </html>
