--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </div>
         <!-- Main Theater Img -->
         <div>
-        <img src="https://lh3.googleusercontent.com/5Dq6ocrWOMHE0B6tCxga2n3vQTjx6-L7j8Y0wuwzckGIQOXaQM5u-xNL-X1sbUA8e9m6-A79QCKKjrY=w1898-h902" alt="TheaterImg" class="MainM"> 
+        <img src="https://lh3.googleusercontent.com/5Dq6ocrWOMHE0B6tCxga2n3vQTjx6-L7j8Y0wuwzckGIQOXaQM5u-xNL-X1sbUA8e9m6-A79QCKKjrY=w1898-h902" alt="TheaterImg" class="MainM">
+            <h1 class="Featured">Featured Shows</h1>
         </div>
         <!-- box -->
         <div class="Secbox">
@@ -37,10 +38,14 @@
         <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
         <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
         </div>
+        <!-- Footer -->
+        <div class="footer">
+            <p>Footer</p>
+            <img src="https://cdn.britannica.com/25/25-050-7DFB6F50/Ethiopia-map-boundaries-cities-locator.jpg" alt="" class="footerimg">
+            <h1 class="Footertxt">Info</h1>
+            <h1 class="Footertxt">Shows</h1>
+            <h1 class="Footertxt">Social</h1>
         </div>
-        <div>
-            <h1 class="bigtxt">Featured Shows</h1>    
-        </div>
-    </div>        
+    </div>               
 </body>
 </html>
