--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
         <div class="Secbox">
           <p class="Sectxt">September Shows</p> </div>
         <!-- Smaller bottom imgs -->
-        <div>         
+        <div>
+            <h1 class="img2box">Read More</h1>    <h1 class="img2txt">A Raisin In The Sun</h1> <p class="img2txt1">April 6 2020 - March 12 2020</p>    
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb"> <h1 class="img2box">Read More</h1> <h1 class="img2txt">A Raisin In The Sun</h1> <p class="img2txt1">April 6 2020 - March 12 2020</p>
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb"> <h1 class="img2box">Read More</h1> <h1 class="img2txt">A Raisin In The Sun</h1> <p class="img2txt1">April 6 2020 - March 12 2020</p>
+        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb"> <h1 class="img2box">Read More</h1> <h1 class="img2txt">A Raisin In The Sun</h1> <p class="img2txt1">April 6 2020 - March 12 2020 </p>
         <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb"> 
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
-        <img src="https://lh3.googleusercontent.com/jb0exCYwQuEO4cKxQs1oYODhRpGAMYl7il-0pypkBzuBFGdAF6fiDFH0HNt9-y6rweEP11hl_1ttbwE=w1898-h902" alt="" class="Img2"> <hr class="lineb">
         </div>
+
         <!-- Footer -->
         <div class="footer">
-            <p>Footer</p>
             <img src="https://cdn.britannica.com/25/25-050-7DFB6F50/Ethiopia-map-boundaries-cities-locator.jpg" alt="" class="footerimg">
-            <h1 class="Footertxt">Info</h1>
-            <h1 class="Footertxt">Shows</h1>
-            <h1 class="Footertxt">Social</h1>
+          <div> <h1 class="Footertxt1">Info</h1> 
+            <h1 class="Footertxt2">Shows</h1> 
+            <h1 class="Footertxt3">Social</h1>  </div>
         </div>
     </div>               
 </body>
